--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -52,16 +52,16 @@ $color-form-success: green !default
 $space-bottom-form: 3rem !default
 
 // btn
-$color-btn-bg: tomato !default
-$color-btn-bg-hover: darken($color-btn-bg, 20%) !default
+$color-btn-bg: $text-color-alt !default
+$color-btn-bg-hover: darken($color-btn-bg, 10%) !default
 $color-btn-text: white !default
 
 // table color
 $color-table-text: #262626 !default
-$color-table-border: tomato !default
+$color-table-border: $text-color-alt !default
 $color-table-bg: white !default
 $color-table-text-alt: white !default
-$color-table-bg-alt: tomato !default
+$color-table-bg-alt: $text-color-alt !default
 
 // animation
 $animation-speed: 0.2s !default
