--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -35,13 +35,15 @@ h3
 	margin-bottom: $bottom-space
 
 h4
+	+font-bold
 	font-size: 2.0rem
-	line-height: 1.2
 	margin-bottom: $bottom-space
 
 h5
-	font-size: 1.8rem
-	line-height: 1.2
+	+font-bold
+	font-size: 1.4rem
+	line-height: 1.4
+	text-transform: uppercase
 	margin-bottom: $bottom-space
 
 h6
@@ -123,6 +125,12 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 
 .nobr
 	white-space: nowrap
+
+.user-container
+	margin-bottom: $bottom-space
+
+	> *:last-child
+		margin-bottom: 0
 
 /*btn*/
 [class|="btn"], [class*=" btn-"], input[type="submit"], input[type="button"], input[type="reset"], button
@@ -209,7 +217,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 		content: ''
 		position: absolute
 		left: 0
-		top: 9px
+		top: 0.6em
 		height: 0
 		width: 0
 		border: solid transparent
@@ -232,8 +240,9 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 			position: relative
 			display: inline-block
 			text-align: left
-			+font-title
-			color: $mark-color
+			font-family: $font-alt
+			font-weight: bold
+			color: $text-color-alt
 			content: counter(section)
 			padding: 0 4px 0 0
 			min-width: 30px
@@ -365,15 +374,15 @@ table
 	blockquote
 		display: block
 		margin: 0
-		background-color: #f5f5f5
-		border-left: 4px solid $text-color-alt
-		padding: 18px 32px 28px 42px
+		padding: 2rem 3rem
 
 		q
 			display: block
 			margin: 0
 			padding: 0 0 10px
-			font-size: $font-size
+			font-family: $font-alt
+			font-weight: bold
+			font-size: round($font-size*1.2)
 			line-height: $line-height
 			color: $text-color
 
@@ -398,8 +407,7 @@ table
 			text-align: right
 			display: block
 			margin-left: auto
-			+font-title
-			font-style: normal
+			+font-italic
 			font-size: $font-size
 			line-height: $line-height
 			color: $text-color
