--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1104,7 +1104,7 @@
 /*======================================================*/
 /*MEDIA QUERIES*/
 /*======================================================*/
-@import "mq"
+//@import "mq"
 
 /*======================================================*/
 /*PRINT STYLES*/
