--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -21,14 +21,18 @@ $link-color: #019875 !default
 $title-color: black !default
 $border-color: #d9d9d9 !default
 $mark-color: tomato !default
+$error-color: red !default
 
 // user content class
 $user-content: content !default
 
 // layout
+$layout-min-width: 992px !default
 $layout-width: 1920px !default
 $layout-space-horizontal: 0 !default
 $layout-grid-space: 100px !default
+$text-layout-width: 640px !default
+$text-layout-space-horizontal: 0 !default
 
 // entry
 $entry-max-width: 640px !default
@@ -97,3 +101,11 @@ $font-alt: 'Noto Serif', serif !default
 	font:
 		family: $font-norm
 		weight: 300
+
+// custom
+$entry-width: 33.6%
+$entry-width-mq: 24%
+$entry-height-mq: 320px
+$entry-height-mq-small: 80px
+$entry-width-home-page: 50%
+$entry-width-home-page-mq: 33%
