--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -39,7 +39,10 @@ $entry-max-width: 640px !default
 $entry-max-width-home: 960px !default
 
 // header height
-$header-height: 92px !default
+//$header-height: 92px !default
+$header-height: 142px !default
+$header-height-mq-md: 118px !default
+$header-height-mq-sm: 72px !default
 $header-height-small: 72px !default
 
 // sidebars
