--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6
 h1
 	font-size: 3.6rem
 	line-height: 1.4
-	margin-bottom: $bottom-space
+	margin-bottom: $bottom-space*1.5
 
 h2
 	font-size: 3.2rem
