--- a/src/sass/_sliders.sass
+++ b/src/sass/_sliders.sass
@@ -1,6 +1,7 @@
 @import "vars"
 @import "mixins"
 
+/*swiper slider*/
 .swiper-button-next, .swiper-button-prev
 	position: absolute
 	top: 50%
@@ -134,3 +135,4 @@
 
 					&.swiper-button--alt
 						left: 70px
+/*swiper slider end*/
