--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -325,6 +325,15 @@ table
 	table
 		margin-bottom: $bottom-space
 
+		&.table-list
+			td
+				font-size: $font-size
+				line-height: $line-height
+				padding: 0
+
+				[style *= 'justify']
+					text-align: left !important
+
 	.table-auto table
 		margin-bottom: 0
 
