--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -560,7 +560,7 @@
 		display: table-cell
 		vertical-align: middle
 		margin: 0
-		padding-right: 20px
+		padding-right: 66px
 		font-size: 0
 		letter-spacing: -4px
 
@@ -605,6 +605,10 @@
 		display: none
 
 /*main navigation end*/
+
+/*lang*/
+@import "lang"
+/*lang end*/
 
 /*search*/
 .btn-search
@@ -931,7 +935,7 @@
 					color: transparent
 					transition-delay: $animation-speed - 0.07s
 
-			.no-touchevents.loaded &.current, .loaded &.current
+			.no-touchevents &.current, &.current
 				a
 					color: white
 
